# GPUArchitect

./: .gitignore  README-zh.md  README.md  prompt.md  pyproject.toml  todo.md
agent_runtime/: codex_runner.mjs  package-lock.json  package.json
docs/: .design_spec_current.md.swp  architecture.md  design_charter.md  index.md
docs/design_history/: v0.3.md  v0.7.md
docs/design_spec/: experiment_pipeline.md  index.md  knowledge_base.md  llm_integration.md  planner.md  system_overview.md
docs/templates/: design_spec_template.md
mvp/: world_model.json
project/: .gitignore  main.py  run.sh  test_openai.py
project/benchmarks/: memory.cu
project/core/: agenda_normalizer.py  agenda_proposer.py  loop.py  planner.py  prompt_loader.py  state_builder.py
project/graph/: pipeline.py
project/knowledge/: claims.jsonl  dedup.py  draft_block_pattern_claim.py  draft_claim.py  draft_iterations_stability_claim.py  draft_overflow_boundary_claim.py  draft_pattern_claim.py  generic_pattern_pipeline.py  observations.jsonl  pattern_pipeline.py  pipeline.py  run_block_pattern_claim.py  run_iterations_stability_claim.py  run_overflow_boundary_claim.py  run_pattern_claim.py  store.py  validate.py
project/llm/: __init__.py  generate.py  interpret.py  openai_client.py
project/model/: model.py
project/parser/: parse_ncu.py
project/planning/: agenda_normalizer.py  agenda_proposer.py  agenda_schema.py  loop.py  (+5 more)
tests/: conftest.py  test_codex_client.py  test_loop.py  test_store.py  test_workflow.py
workflow/: active.yaml  experiment_families.yaml
workspace/: gpu_research.yaml
(+131 files in other folders)
